# ff

./: README.md
control_mqtt/: CMakeLists.txt  package.xml
control_mqtt/src/: uav_gps_setpoint.cpp  uav_sp_cmdack.cpp  uav_sp_fix.cpp
setup_pi/: Executation_guide  README.md  auto_hotspot  auto_start_tur.txt  dougle_4g_setup.txt  start_uav.sh
uav_mqtt_bridge/: package.xml  readme.txt  setup.cfg  setup.py
uav_mqtt_bridge/launch/: gimbal_control.launch.py
uav_mqtt_bridge/uav_mqtt_bridge/: gimbal.py  image_capture.py  videostream_actions.py
uav_mqtt_bridge/uav_mqtt_bridge/config/: bridge_config.json  gimbal_command_examples.json  gimbal_params.yaml
uav_mqtt_bridge/uav_mqtt_bridge/siyi_sdk/: __init__.py  siyi_sdk.py
uav_msgs/: CMakeLists.txt  package.xml
uav_msgs/msg/: EventUav.msg  TargetGlobal.msg  UserCmd.msg
